--- a/src/Admin_route/AccountManagement.css
+++ b/src/Admin_route/AccountManagement.css
@@ -1,6 +1,7 @@
 .account-container {
   padding: 20px;
-  max-width: 900px;
+  /* max-width: 900px; */
+  max-width: 1200px; 
   margin: auto;
   opacity: 0;
   transform: translateY(-10px);
