--- a/src/Student_route/UserProfile.css
+++ b/src/Student_route/UserProfile.css
@@ -1,7 +1,7 @@
 :root {
     --primary-color: #4CAF50;
     --secondary-color: #2196F3;
-    --warning-color: #ff9800;
+    --warning-color: #046df7;
     --background-light: #f9f9f9;
     --text-dark: #333;
     --border-color: #ddd;
