--- a/src/Admin_route/Dashboard.css
+++ b/src/Admin_route/Dashboard.css
@@ -5,7 +5,7 @@
 
 .sidebar {
   width: 250px;
-  background-color: #f8f9fa;
+  background-color: #147de7;
   border-right: 1px solid #dee2e6;
   display: flex;
   flex-direction: column;
@@ -29,13 +29,13 @@
 .sidebar-header h2 {
   margin: 0;
   font-size: 18px;
-  color: #343a40;
+  color: #ebf1f8;
 }
 
 .sidebar-header p {
   margin: 0;
   font-size: 14px;
-  color: #6c757d;
+  color: #ffffff;
 }
 
 nav {
@@ -51,12 +51,12 @@ nav ul {
 nav ul li {
   padding: 15px 20px;
   cursor: pointer;
-  color: #495057;
+  color: #ffffff;
   transition: background-color 0.3s;
 }
 
 nav ul li:hover {
-  background-color: #e9ecef;
+  background-color: #000000;
 }
 
 .main-content {
