--- a/src/Admin_route/AccountManagement.css
+++ b/src/Admin_route/AccountManagement.css
@@ -14,11 +14,10 @@
   max-width: none; /* Không giới hạn chiều rộng */
 }
 
-
 @keyframes fadeIn {
   to {
-      opacity: 1;
-      transform: translateY(0);
+    opacity: 1;
+    transform: translateY(0);
   }
 }
 
@@ -67,7 +66,9 @@
   color: white;
   background-color: red;
   border: none;
-  transition: background-color 0.3s ease-in-out, transform 0.2s ease-in-out;
+  transition:
+    background-color 0.3s ease-in-out,
+    transform 0.2s ease-in-out;
 }
 
 .disable-button:hover {
@@ -78,55 +79,55 @@
 /* Responsive styles */
 @media (max-width: 768px) {
   .account-container {
-      padding: 10px;
-      max-width: 100%;
+    padding: 10px;
+    max-width: 100%;
   }
 
   .search-input {
-      margin-bottom: 5px;
+    margin-bottom: 5px;
   }
 
   .add-button {
-      margin-bottom: 5px;
+    margin-bottom: 5px;
   }
 
   .account-table {
-      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
   }
 
   .account-table:hover {
-      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
   }
 
   .edit-button:hover,
   .disable-button:hover {
-      transform: scale(1.05);
+    transform: scale(1.05);
   }
 }
 
 @media (max-width: 480px) {
   .account-container {
-      padding: 5px;
+    padding: 5px;
   }
 
   .search-input {
-      margin-bottom: 3px;
+    margin-bottom: 3px;
   }
 
   .add-button {
-      margin-bottom: 3px;
+    margin-bottom: 3px;
   }
 
   .account-table {
-      box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
   }
 
   .account-table:hover {
-      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
   }
 
   .edit-button:hover,
   .disable-button:hover {
-      transform: scale(1.03);
+    transform: scale(1.03);
   }
 }
