--- a/src/Guest_route/GuestDashboard.css
+++ b/src/Guest_route/GuestDashboard.css
@@ -4,7 +4,7 @@
 }
 
 .sidebar {
-  width: 250px;
+  width: 400px;
   background-color: #f8f9fa;
   border-right: 1px solid #dee2e6;
   display: flex;
@@ -21,14 +21,6 @@
   text-align: center;
   border-bottom: 1px solid #dee2e6;
 }
-.sidebar-header {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  padding: 20px;
-  border-bottom: 1px solid #dee2e6;
-}
 
 .logo {
   margin-bottom: 10px;
@@ -37,7 +29,7 @@
 .sidebar-header h2 {
   margin: 0;
   font-size: 18px;
-  color: #343a40;
+  color: #ffffff;
 }
 
 .sidebar-header p {
