--- a/src/Login.css
+++ b/src/Login.css
@@ -3,11 +3,12 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  font-family: 'Poppins', sans-serif; /* Chọn font phù hợp */
+  font-family: "Poppins", sans-serif; /* Chọn font phù hợp */
 }
 
 /* Toàn màn hình */
-body, html {
+body,
+html {
   width: 100%;
   height: 100%;
   background-color: #f5f5f5;
@@ -160,7 +161,7 @@ body, html {
 .facebook-btn {
   width: 100%;
   padding: 12px;
-  background: #4267B2;
+  background: #4267b2;
   border: none;
   border-radius: 5px;
   color: #fff;
