--- a/src/Student_route/StudentDashboard.css
+++ b/src/Student_route/StudentDashboard.css
@@ -4,7 +4,7 @@
 }
 
 .sidebar {
-  width: 250px;
+  width: 400px;
   background-color: #f8f9fa;
   border-right: 1px solid #dee2e6;
   display: flex;
@@ -19,6 +19,14 @@
 .sidebar-header {
   padding: 20px;
   text-align: center;
+  border-bottom: 1px solid #dee2e6;
+}
+.sidebar-header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 20px;
   border-bottom: 1px solid #dee2e6;
 }
 
